kernel: export all kernel subpackages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,7 @@ dependencies = []
 testpaths = ["tests"]
 addopts = "-q"
 
-[tool.setuptools]
-packages = ["kernel"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["kernel*"]
+
